# Solvers

./: .gitignore  .pylintrc  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  requirements[dev].txt  setup.cfg  setup.py
.github/workflows/: code_quality.yml  codeql.yml  jekyll-gh-pages.yml  publish_solvers.yml  pylint.yml
docs/: interpolators.md  main.md  newton-cotes-integrators.md  numerical_integration.md  spline-interpolators.md  system-of-equation-solvers.md
docs/integrators/: newton-cotes-integrators.md
docs/interpolators/: lagrange-interpolators.md  newton-interpolators.md
docs/iterative-solvers/: gauss-jacobi.md  gauss-seidel.md  predictor-corrector.md  rk-multi-solvers.md  rk-solvers.md  root-finding--functions.md
docs/iterative_solvers/: gauss-jacobi.md  gauss-seidel.md
docs/matrix-decomposition/: cholesky-decomposition.md  gauss-elimination.md
docs/matrix_decomposition/: cholesky-decomposition.md
src/: __init__.py
src/Solvers/: __init__.py
src/Solvers/__backend/: ITERATIVE_SOLVER_.py  __init__.py  errors_.py  interpolation_.py  newton_cotes_.py  spline_.py
src/Solvers/integrators/: NewtonCotesIntegrators.py  (+2 more)
src/examples/: __init__.py
src/interpolators/: BackwardInterpolation.py  DividedInterpolation.py  ForwardInterpolation.py  LagrangeInterpolation.py  NewtonianInterpolators.py  SplineInterpolation.py
src/iterative_solvers/: GaussJacobi.py  GaussSeidel.py  ITERATIVE_SOLVER_.py  NewtonCotesSolvers.py  RungeKutta.py
src/newtonian_interpolators/: ForwardInterpolation.py
src/num_solvers/: __init__.py  fdm.py  version.py
tests/: __init__.py
(+95 files in other folders)
