[metadata]
name = num_solvers
version = 0.1.0
url = https://github.com/syedalimohsinbukhari/Solvers
author = Syed Ali Mohsin Bukhari, Astrophysics and Python
author_email = syedali.b@outlook.com, astrophysicsandpython@gmail.com
license = MIT
license_files = LICENSE
description = A library for some basic numerical solvers.
long_description = file: README.md
long_description_content_type = "text/markdown"

[options]
package_dir =
    = src

packages = find:
python_requires = ">= 3.9"

install_requires =
    custom-inherit
    numpy~=1.26.4
    setuptools
    umatrix

[options.packages.find]
where = src

classifiers =
    License :: OSI Approved :: CC License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
